--- a/DAM_Sem11_Proyecto/app/src/main/res/values/strings.xml
+++ b/DAM_Sem11_Proyecto/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_notas">Notas</string>
+    <string name="title_favoritas">Favoritas</string>
+    <string name="title_user_profile">Mi perfil</string>
+    <string name="Titulo">Titulo</string>
+    <string name="contenido">contenido</string>
 </resources>
